Fixing header jump when gallery is opened

--- a/sass/components/_content.scss
+++ b/sass/components/_content.scss
@@ -180,12 +180,15 @@ footer {
 
 ::-webkit-input-placeholder {
    color: $placeholder;
+   font-weight: 300;
 }
 ::-moz-placeholder {
    color: $placeholder;
+   font-weight: 300;
 }
 :-ms-input-placeholder {
    color: $placeholder;
+   font-weight: 300;
 }
 
 
@@ -213,8 +216,16 @@ form {
 		font-family: $primaryFont;
 		padding: 0.25em 0.5em;
 		border: 0;
-		background-color: rgba(255,255,255,0.5);
+		background-color: $halfWhite;
 		margin: 1em 0;
+		transition: box-shadow 250ms ease-in;
+		box-shadow: 0 0 16px -4px transparent;
+
+		&:focus {
+			outline: 0;
+			outline-offset: 0;
+			box-shadow: 0 3px 16px -4px $linkColor;
+		}
 	}
 	textarea {
 		height: 5em;
@@ -265,12 +276,7 @@ h1, h2, h3, h4, h5, h6, p, nav a, .avatar, .screenshots:not(.active-gallery) {
 	}
 
 	.avatar {
-		-webkit-filter: blur(6px);
-		-moz-filter: blur(6px);
-		filter: blur(6px);
-		// accelleration for scroll performance with blur
-		-webkit-transform: translate3d(0,0,0);
-		transform: translate3d(0,0,0);
+		@include bgBlur(6px);
 	}
 }
 .touch {
@@ -318,6 +324,7 @@ h1, h2, h3, h4, h5, h6, p, nav a, .avatar, .screenshots:not(.active-gallery) {
 		left: 0;
 		transform: translateZ(-1px) scale(2);
 		z-index: -1;
+		transition: position 400ms ease-in;
 	}
 	.lax-over {
 		background-color: white;
@@ -347,6 +354,10 @@ h1, h2, h3, h4, h5, h6, p, nav a, .avatar, .screenshots:not(.active-gallery) {
 		}
 		.lax-layer {
 			transform: scale(1);
+		}
+
+		footer {
+			@include bgBlur(6px);
 		}
 	}
 }
