--- a/sass/components/_util.scss
+++ b/sass/components/_util.scss
@@ -5,3 +5,11 @@
 		clear: both;
 	}
 }
+@mixin bgBlur($amt) {
+	-webkit-filter: blur($amt);
+	-moz-filter: blur($amt);
+	filter: blur($amt);
+	// accelleration for scroll performance with blur
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+}
